--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
